--- a/main.css
+++ b/main.css
@@ -4,10 +4,11 @@ textarea{
 }
 .container{
     display: grid;
-    grid-template-columns: 20% 35% 10% 35%;
-    grid-template-rows: 10% 80% 10%;
-    grid-template-areas:
-        "punctuation_marks_list_header input_header button_header output_header"
-        "punctuation_marks input button output"
-        "footer footer footer footer";
+    grid-template-columns: 15% 35% auto 35%;
+}
+.container * {
+    margin: 5px;
+}
+.button {
+    align-self:center;
 }
